fix: accès pages admins à nouveau

--- a/app/Resources/views/landing/inviter.html.twig
+++ b/app/Resources/views/landing/inviter.html.twig
@@ -3,19 +3,21 @@
 {% block content %}
 
 <div class="container">
-  <button type="button" class="btn btn-secondary btn-lg btn-block">Vos raids en tant qu'organisateur {{user.username}}</button>
-  <br/>
-
-  <ul class="list-group flexcolumn">
-  {% for raid in raids_organisateurs %}
-    <li class="list-group-item d-flex justify-content-between align-items-center">
-      {{raid.nom}}
-      <a href= {{ path('inviter_benevole', {'id_raid': raid.id }) }}>
-        Inviter des bénevoles!
-      </a>
-    </li>
-  {% endfor %}
-  </ul>
-
+  <h2 class="btn btn-secondary btn-lg btn-block">Inviter du monde à participer !</h2>
+  {% if raids_organisateurs %}
+    
+    <ul class="list-group flexcolumn">
+    {% for raid in raids_organisateurs %}
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        {{raid.nom}}
+        <a href= {{ path('inviter_benevole', {'id_raid': raid.id }) }}>
+          Inviter des bénevoles!
+        </a>
+      </li>
+    {% endfor %}
+    </ul>
+  {% else %}
+    <p>Vous n'organisez pour le moment aucun RAID.</p>
+  {% endif %}
 </div>
 {% endblock %}
