--- a/app/Resources/views/raid/description_raid_organisateur.html.twig
+++ b/app/Resources/views/raid/description_raid_organisateur.html.twig
@@ -57,7 +57,7 @@
     {% else %}
         <div class="alert alert-danger" role="alert">
             Vous n'êtes pas organisateur de ce RAID.<br>
-            Merci de vous adressez à un des organisateurs pour accéder à cette page
+            Merci de vous adresser à un des organisateurs pour accéder à cette page
         </div>
     {% endif %}
 </div>
