--- a/app/Resources/views/landing/gestionRaid.html.twig
+++ b/app/Resources/views/landing/gestionRaid.html.twig
@@ -3,19 +3,23 @@
 {% block content %}
 
 <div class="container">
-  <button type="button" class="btn btn-secondary btn-lg btn-block">Vos raids en tant qu'organisateur {{user.username}}</button>
-  <br/>
+  <h2 class="btn btn-secondary btn-lg btn-block">Vos raids en tant qu'organisateur {{user.username}}</h2>
+  {% if raids_organisateurs %}
+  
+    <ul class="list-group flexcolumn">
+    {% for raid in raids_organisateurs %}
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        {{raid.nom}}
+        <div>
+          <a href= {{ path('gestion_raid_description', {'id_raid': raid.id }) }}>Editer</a>
+          <a href= {{ path('gestion_raid_organisateurs', {'id_raid': raid.id }) }}>Gérer les organisateurs</a>
+        </div>
+      </li>
+    {% endfor %}
+    </ul>
 
-  <ul class="list-group flexcolumn">
-  {% for raid in raids_organisateurs %}
-    <li class="list-group-item d-flex justify-content-between align-items-center">
-      {{raid.nom}}
-      <div>
-        <a href= {{ path('gestion_raid_description', {'id_raid': raid.id }) }}>Editer</a>
-        <a href= {{ path('gestion_raid_organisateurs', {'id_raid': raid.id }) }}>Gérer les organisateurs</a>
-      </div>
-    </li>
-  {% endfor %}
-  </ul>
+  {% else %}
+    <p>Vous n'organisez pour le moment aucun RAID.</p>
+  {% endif %}
 </div>
 {% endblock %}
