--- a/app/Resources/views/landing/inviter_benevole.html.twig
+++ b/app/Resources/views/landing/inviter_benevole.html.twig
@@ -2,28 +2,21 @@
 
 {% block content %}
 <div class='vertical-center'>
-
-    {% if est_organisateur %}
+    {% if est_organisateur %}   
         <div class="container col col-md-4">
             <div class="card default-color-dark ">
-                {{ form_start(form, {'attr': {'class': 'center border border-light p-5 '}}) }}
-                    <p class="h4 mb-2 text-center">Création d'un parcours</p>
-                    
+                {{ form_start(form, {'attr': {'class': 'center border border-light p-5'}}) }}
+                    <p class="h4 mb-2 text-center">Inviter des bénévoles</p>
+
                     <div class="form-row mb-4">
                         <div class="col">
-                            {{ form_row(form.nom, {'attr': {'class': 'form-control'}}) }}
+                            {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
                         </div>
                     </div>
 
                     <div class="form-row mb-4">
                         <div class="col">
-                            {{ form_row(form.type, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div>
-
-                    <div class="form-row mb-4">
-                        <div class="col">
-                            <button class="btn btn-info my-4 btn-block" type="submit">Créer un parcours</button>
+                            <button class="btn btn-info my-4 btn-block" type="submit">Inviter</button>
                         </div>
                         <div class="col">
                             <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
