--- a/app/Resources/views/raid/description_raid_organisateur.html.twig
+++ b/app/Resources/views/raid/description_raid_organisateur.html.twig
@@ -6,85 +6,18 @@
     {% if est_organisateur %}
         <h1>Edition du RAID : {{raid.nom}}</h1>
         <h2>Liste des parcours</h2>
-
-
-        <script type="text/javascript">
-            var token = $('.container').data('token');
-            //let raid = $('.container').data('raid');
-            var tous_points_traces;
-            var tab_traces_points = [];
-
-            $(".btn-primary").click( function() {
-                var id_parcours = this.getAttribute('id');
-                
-                $.when(recuperer_points_traces(id_parcours).done(function(data, textStatus, jqXHR){
-                    let length_tab_traces_points = tab_traces_points.length;
-
-                    for (let i = 0 ; i < length_tab_traces_points ; i++) {
-                        function downloadableCSV(rows) {
-                            var geojson = {
-                                "name":"NewFeatureType",
-                                "type":"FeatureCollection",
-                                "features":[{
-                                    "type":"Feature",
-                                    "geometry":{
-                                        "type":"LineString",
-                                        "coordinates":[]
-                                    },
-                                    "properties":null
-                                }]
-                            };
-  
-                            rows.forEach(function(element) {
-                                var lat = element.lat;
-                                var lon = element.lon;
-                                geojson.features[0].geometry.coordinates.push([lon, lat]);
-                            })
-
-                            var blob = new File([JSON.stringify(geojson)], {
-                                type: "text/plain;charset=utf-8"
-                            });
-
-                            saveAs(blob, "test.geojson");
-
-                            //return encodeURI(content);
-                        }
-                        downloadableCSV(tab_traces_points[i]);
-                    }
-                }));
-            });
-
-            function recuperer_points_traces(id){
-                return $.ajax({  
-                    url: 'http://raidtracker.ddns.net/raid_tracker_api/web/app.php/api/points/parcours/'+id,  
-                    type: 'GET',
-                    dataType: 'json',  
-                    headers: {"X-Auth-Token": token},
-                    success: function(data){
-                        let data_length = data.length;
-                        let tab_trace_points = [];
-                        let tab_point = [];
-                        let j = 0;
-                        tab_traces_points = [];
-
-                        for (let i = 0 ; i < data_length ; i++) {
-                            tab_point = [];
-                            tab_point["lon"] = data[i].lon;
-                            tab_point["lat"] = data[i].lat;
-                            tab_trace_points.push(tab_point);
-
-                            if(data[i].type == 2) {
-                                tab_traces_points[j] = tab_trace_points;
-                                tab_trace_points = [];
-                                j++;
-                            }
-                        },
-                        error: function (xhr, textStatus, errorThrown) {  
-                            console.log('Erreur lors de la récupération des points des tracés');  
-                        }
-                    });
-                }
-            </script>
+        {% if all_parcours != null %}
+            <ul class="list-group">
+                {% for parcours in all_parcours %}
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            {{parcours.nom}}
+                            <div>
+                                <a href= {{ path('carte_edit', {'id_parcours': parcours.id} ) }}>Editer</a>
+                                <button id={{parcours.id}} type="submit" class="btn btn-primary">Save to file</button>         
+                            </div>
+                        </li>                
+                {% endfor %}
+            </ul>
         {% else %}
             <p>Aucun parcours dans ce raid</p>
         {% endif %}
@@ -111,7 +44,7 @@
         </ul>
     
         <h2>Bénévoles déjà affectés</h2>
-         <ul class="list-group">
+        <ul class="list-group">
             {% for repartition in all_repartitions %}
                 <li class="list-group-item text-left">
                     {{ repartition.idBenevole.idUser.username }} - 
@@ -126,5 +59,85 @@
         </div>
     {% endif %}
 </div>
+
+<script type="text/javascript">
+    var token = $('.container').data('token');
+    //let raid = $('.container').data('raid');
+    var tous_points_traces;
+    var tab_traces_points = [];
+
+    $(".btn-primary").click( function() {
+        var id_parcours = this.getAttribute('id');
+        
+        $.when(recuperer_points_traces(id_parcours).done(function(data, textStatus, jqXHR){
+            let length_tab_traces_points = tab_traces_points.length;
+
+            for (let i = 0 ; i < length_tab_traces_points ; i++) {
+                function downloadableCSV(rows) {
+                    var geojson = {
+                        "name":"NewFeatureType",
+                        "type":"FeatureCollection",
+                        "features":[{
+                            "type":"Feature",
+                            "geometry":{
+                                "type":"LineString",
+                                "coordinates":[]
+                            },
+                            "properties":null
+                        }]
+                    };
+
+                    rows.forEach(function(element) {
+                        var lat = element.lat;
+                        var lon = element.lon;
+                        geojson.features[0].geometry.coordinates.push([lon, lat]);
+                    })
+
+                    var blob = new File([JSON.stringify(geojson)], {
+                        type: "text/plain;charset=utf-8"
+                    });
+
+                    saveAs(blob, "test.geojson");
+
+                    //return encodeURI(content);
+                }
+                downloadableCSV(tab_traces_points[i]);
+            }
+        }));
+    });
+
+    function recuperer_points_traces(id){
+        return $.ajax({  
+            url: 'http://raidtracker.ddns.net/raid_tracker_api/web/app.php/api/points/parcours/'+id,  
+            type: 'GET',
+            dataType: 'json',  
+            headers: {"X-Auth-Token": token},
+            success: function(data){
+                let data_length = data.length;
+                let tab_trace_points = [];
+                let tab_point = [];
+                let j = 0;
+                tab_traces_points = [];
+
+                for (let i = 0 ; i < data_length ; i++) {
+                    tab_point = [];
+                    tab_point["lon"] = data[i].lon;
+                    tab_point["lat"] = data[i].lat;
+                    tab_trace_points.push(tab_point);
+
+                    if(data[i].type == 2) {
+                        tab_traces_points[j] = tab_trace_points;
+                        tab_trace_points = [];
+                        j++;
+                    }
+                },
+                error: function (xhr, textStatus, errorThrown) {  
+                    console.log('Erreur lors de la récupération des points des tracés');  
+                }
+            });
+        });
+    }
+</script>
+
 
 {% endblock %}
