--- a/app/Resources/views/auth/register.html.twig
+++ b/app/Resources/views/auth/register.html.twig
@@ -5,6 +5,20 @@
 <div class='container col col-md-4'>
 <div class="card default-color-dark">
 {{ form_start(form, {'attr': {'class': 'center border border-light p-5'}}) }}
+
+{% for message in app.flashes('notice') %}
+    <div class="alert alert-danger">
+        {{ message }}
+    </div>
+{% endfor %}
+
+
+{% for message in app.flashes('error') %}
+    <div class="alert alert-warning">
+        {{ message }}
+    </div>
+{% endfor %}
+
     <p class="h4 mb-4 text-center">Créer un compte</p>
     <div class="form-row mb-4">
         <div class="col">
@@ -30,7 +44,7 @@
             {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
-    
+
     <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-center text-muted mb-4">
         Au moins 8 charactères dont 1 chiffre
     </small>
@@ -44,7 +58,7 @@
     <p class="text-center">En cliquant sur
         <em>Créer un compte</em> vous acceptez les
         <a href="" target="_blank">Conditions d'utilisation</a> et la
-        <a href="" target="_blank">Politique de confidentialité</a>. 
+        <a href="" target="_blank">Politique de confidentialité</a>.
     </p>
 {{ form_end(form) }}
 </div>
