--- a/app/Resources/views/raid/new.html.twig
+++ b/app/Resources/views/raid/new.html.twig
@@ -5,6 +5,13 @@
     <div class="container col col-md-4">
             <div class="card default-color-dark ">
                 {{ form_start(raid, {'attr': {'class': 'center border border-light p-5'}}) }}
+
+                {% for message in app.flashes('notice') %}
+                    <div class="alert alert-danger">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+                
                     <p class="h4 mb-4 text-center">Création de Raid</p>
 
                     <div class="form-row mb-4">
