--- a/app/Resources/views/raid/description_raid_organisateur.html.twig
+++ b/app/Resources/views/raid/description_raid_organisateur.html.twig
@@ -65,38 +65,18 @@
     $(".btn-primary").click( function() {
         var id_parcours = this.getAttribute('id');
         
-        $.when(recuperer_points_traces(id_parcours).done(function(data, textStatus, jqXHR){
-            let length_tab_traces_points = tab_traces_points.length;
+        $.when(recuperer_points_parcours(id_parcours).done(function(data, textStatus, jqXHR){
 
-            for (let i = 0 ; i < length_tab_traces_points ; i++) {
-                function downloadableCSV(rows) {
-                    var geojson = {
-                        "name":"NewFeatureType",
-                        "type":"FeatureCollection",
-                        "features":[{
-                            "type":"Feature",
-                            "geometry":{
-                                "type":"LineString",
-                                "coordinates":[]
-                            },
-                            "properties":null
-                        }]
-                    };
+            let tab_trace = []
+            let count_traces = 0;
 
-                    rows.forEach(function(element) {
-                        var lat = element.lat;
-                        var lon = element.lon;
-                        geojson.features[0].geometry.coordinates.push([lon, lat]);
-                    })
-
-                    var blob = new File([JSON.stringify(geojson)], {
-                        type: "text/plain;charset=utf-8"
-                    });
-
-                    saveAs(blob, "test.geojson");
+            data.forEach((point) => {
+                tab_trace.push(point);
+                if(point.type == 2){
+                    telechargerGeoJSON(tab_trace, id_parcours);
+                    tab_trace = [];
                 }
-                downloadableCSV(tab_traces_points[i]);
-            }
+            });
         }));
     });
 
@@ -151,34 +131,44 @@
         }));
     });
 
-    function recuperer_points_traces(id){
+    function telechargerGeoJSON(trace, id) {
+        var geojson = {
+            "name":"NewFeatureType",
+            "type":"FeatureCollection",
+            "features":[{
+                "type":"Feature",
+                "geometry":{
+                    "type":"LineString",
+                    "coordinates":[]
+                },
+                "properties":null
+            }]
+        };
+
+        trace.forEach(function(point) {
+            let lat = point.lat;
+            let lon = point.lon;
+            geojson.features[0].geometry.coordinates.push([lon, lat]);
+        })
+
+        var blob = new File([JSON.stringify(geojson)], {
+            type: "text/plain;charset=utf-8"
+        });
+
+        saveAs(blob, "export_parcours_"+ id +".geojson");
+    }
+
+    function recuperer_points_parcours(id){
         return $.ajax({  
             url: 'http://raidtracker.ddns.net/raid_tracker_api/web/app.php/api/points/parcours/'+id,  
             type: 'GET',
             dataType: 'json',  
             headers: {"X-Auth-Token": token},
             success: function(data){
-                let data_length = data.length;
-                let tab_trace_points = [];
-                let tab_point = [];
-                let j = 0;
-                tab_traces_points = [];
-
-                for (let i = 0 ; i < data_length ; i++) {
-                    tab_point = [];
-                    tab_point["lon"] = data[i].lon;
-                    tab_point["lat"] = data[i].lat;
-                    tab_trace_points.push(tab_point);
-
-                    if(data[i].type == 2) {
-                        tab_traces_points[j] = tab_trace_points;
-                        tab_trace_points = [];
-                        j++;
-                    }
-                }
+                console.log('Points du parcours ['+ id +'] récupérés avec succès!');
             },
             error: function (xhr, textStatus, errorThrown) {  
-                console.log('Erreur lors de la récupération des points des tracés');  
+                console.log(xhr.responseJSON.message);  
             }
         });
     }
